Add firefox compatability through the polyfill library.
This library was required to make the frontend work in firefox too,
because firefox doesn't support them. See
http://webcomponents.org/polyfills/ and
https://developer.mozilla.org/en-US/docs/Web/Web_Components/HTML_Imports

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="import" href="theme.html">
     <link rel="import" href="style.html">
     <script src="script.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
 </head>
 
 <body class="fullbleed vertical layout">
